# BOT

./: .env.example  Dockerfile  README.md  SECRETS.md  SECURITY.md  check_security.py  dev_test.py  docker-compose.yml  pyproject.toml  requirements.txt  validate_security.py
.github/workflows/: ci.yml
app/: main.py
app/db/: database.py
app/routers/: health.py  websocket.py
app/services/: rate_limiter.py  redis_service.py
core/: config.py
tests/: conftest.py  test_config.py  test_health.py  test_websocket.py
